# proto-error-handling

./: .gitignore  LICENSE  Makefile  buf.gen.yaml  buf.yaml
autogenerated/go/: go.mod
autogenerated/go/helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
autogenerated/python/helloworld/: helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py
autogenerated/rust/: Cargo.toml
autogenerated/rust/src/: hello_world.rs  hello_world.tonic.rs  lib.rs
go/: go.mod  main.go
go/internal/helloworld/: userrepo.go  userservice.go
go/pkg/statusdetails/: status.go  withdetails.go
proto/: Cargo.toml  setup.py
proto/helloworld/: helloworld.proto
rust/: Cargo.toml
rust/src/: main.rs  userservice.rs
